# bevy_jam_5

./: .gitignore  Cargo.toml  README.md  Trunk.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yaml
assets/: registry.json
assets/audio/sfx/: recognitions.md
assets/models/: bad_water_tank.glb  earth.blend  earth.blend1  guy-tex.glb  guy.glb  hob-tex.glb  hydrogen_tank.glb  hydroponic.blend  hydroponic.blend1  hydroponic.glb  kitchen.glb  metal_trash.blend  metal_trash.blend1  metal_trash.glb  my_ship.blend  my_ship.blend1  my_ship.glb  oxygen_generator.blend  oxygen_generator.blend1  oxygen_generator.glb  oxygen_tank.glb  pc.blend  pc.blend1  pc.glb  pee_tank.blend  pee_tank.blend1  pee_tank.glb  ship.blend  tank.blend  tank.blend1  toilet.glb  vent-tex2.glb  vent.blend  vent.blend1  water_cleaner.glb  water_dispenser.glb  water_tank.glb
assets/shaders/: cartoon.wgsl
docs/: design.md
node_tree/: Cargo.toml  READMY.md
node_tree/examples/: show_time.rs
node_tree/src/: byte_holder.rs  component_holder.rs  lib.rs  raw_component_holder.rs  styling.rs  tree.rs  typed_component_holder.rs
src/: dev_tools.rs  lib.rs  main.rs
src/game/: animation.rs  assets.rs  auto_anim.rs  bilboard_state.rs  billboard_state.rs  character.rs  daycycle.rs  debt.rs  device_state.rs  difficult.rs  highlight.rs  kitchen_work.rs  metal_trash.rs  mod.rs  movement.rs  pc_work.rs  resource_flow.rs  resources.rs  selectable.rs  sequence.rs  sprite_material.rs  trouble_planner.rs
src/game/audio/: soundtrack.rs
src/game/components/: earth.rs  fire.rs  flowup_text.rs  hydroponic.rs  kitchen.rs  metal_trash.rs  metal_trash_pile.rs  mod.rs  oxygen_recycler.rs  pc.rs  toilet.rs  water_cleaner.rs  water_dispenser.rs
src/game/map/: map_generator.rs  mod.rs
src/game/render/: cartoon_style.rs  mod.rs
src/game/spawn/: level.rs  mod.rs  player.rs  spawn_commands.rs
src/game/ui/: computer_menu.rs  constants.rs  context_menu.rs  game_over.rs  mod.rs  root.rs
src/game/ui/components/: action_button.rs  debt.rs  end_screen.rs  mod.rs  resource_panel.rs  resource_slider.rs
src/screen/: credits.rs  loading.rs  mod.rs  splash.rs
src/ui/: interaction.rs
